--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,7 @@ header .header-container input{
 .select-guitar img{
   width: 20px;
   height: 18px;
+  cursor: pointer;
 }
 
 .container {
@@ -209,6 +210,8 @@ header .header-container input{
   color: #111;
   transition: 0.3s ease-in-out;
   margin-left: 2rem;
+  display: flex;
+  flex-direction: column;
   width: 450px;
 }
 
@@ -228,6 +231,44 @@ header .header-container input{
   padding-bottom: 1rem;
   text-transform: inherit;
   font-size: 20px;
+}
+
+.selected-guitar .card-item .content-item .btn-edit{
+  width: 150px;
+  padding: 5px 15px;
+  margin: 10px;
+  background: #5bc59d;
+  cursor: pointer;
+  text-align: center;
+  
+}
+
+.selected-guitar .card-item .content-item .btn-edit:hover{
+  letter-spacing: 2px;
+  background: #18d38b;
+  transition: 0.5s ease-in-out;
+}
+
+.selected-guitar .card-item .content-item .btn-delete{
+  width: 150px;
+  padding: 5px 15px;
+  margin: 10px;
+  background: #df2c2c;
+  cursor: pointer;
+  text-align: center;
+}
+
+.selected-guitar .card-item .content-item .btn-delete:hover{
+  background: #9c1f1f;
+  color: #fff;
+  transition: 0.5s ease-in-out;
+}
+
+.home{
+  text-decoration: none;
+  color: #111;
+  padding: 20px;
+  display: none;
 }
 
 @media (max-width: 1030px) {
@@ -266,12 +307,13 @@ header .header-container input{
     color: #111;
     transition: 0.3s ease-in-out;
     top: -5rem;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .selected-guitar .card-item .content-item h2 {
     padding-bottom: 2rem;
-    text-align: center;
   }
   
   .selected-guitar .card-item .content-item .model {
@@ -283,7 +325,6 @@ header .header-container input{
   }
   .selected-guitar .card-item .content-item .price {
     padding-bottom: 1rem;
-    text-transform: inherit;
     font-size: 20px;
   }
 }
@@ -309,6 +350,24 @@ header .header-container input{
   letter-spacing: 2px;
   background: #5bc59d;
   transition: 1s ease-in-out;
+}
+
+.msg-alert{
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 1.5s;
+}
+
+.sucess{
+  background: #5bb0c5;
+  transition: 1s;
+}
+
+.alert{
+  background: #d66262;
+  transition: 1s;
 }
 
 #popup{
@@ -478,6 +537,7 @@ header .header-container input{
   color: #fff;
   transition: 0.5s ease-in-out;
 }
+
 
 .close{
   position: absolute;
